// Copyright 2025 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.config.securecomputation;

import "google/api/field_behavior.proto";

option java_package = "org.wfanet.measurement.config.securecomputation";
option java_multiple_files = true;
option java_outer_classname = "QueuesConfigProto";

message QueuesConfig {
  message QueueInfo {
    string queue_resource_id = 1;
    // The type url for params that the queue supports
    // (-- api-linter: core::0140::uri=disabled
    //     aip.dev/not-precedent: Referring to a type url. --)
    string app_params_type_url = 2 [(google.api.field_behavior) = REQUIRED];
  }

  repeated QueueInfo queueInfos = 1;
}